--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="text_size_body_2">16sp</dimen>
     <dimen name="text_size_subhead">18sp</dimen>
+    <dimen name="text_size_headline">24sp</dimen>
+    <dimen name="text_size_title">20sp</dimen>
+    <dimen name="text_size_body_1">14sp</dimen>
 </resources>
