--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,11 @@
         <item name="android:divider">@color/divider</item>
     </style>
 
+    <style name="Fitness.TextAppearance.AppCompat.Body1.Regular" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textSize">@dimen/text_size_body_1</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
+    </style>
+
     <style name="Fitness.TextAppearance.AppCompat.Body2.Medium" parent="TextAppearance.AppCompat.Body2">
         <item name="android:textSize">@dimen/text_size_body_2</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
@@ -20,5 +25,20 @@
     <style name="Fitness.TextAppearance.AppCompat.Subhead.Medium" parent="TextAppearance.AppCompat.Subhead">
         <item name="android:textSize">@dimen/text_size_subhead</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
+    </style>
+
+    <style name="Fitness.TextAppearance.AppCompat.Headline.Regular" parent="TextAppearance.AppCompat.Headline">
+        <item name="android:textSize">@dimen/text_size_headline</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
+    </style>
+
+    <style name="Fitness.TextAppearance.AppCompat.Subhead.Regular" parent="TextAppearance.AppCompat.Subhead">
+        <item name="android:textSize">@dimen/text_size_subhead</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
+    </style>
+
+    <style name="Fitness.TextAppearance.AppCompat.Title.Regular" parent="TextAppearance.AppCompat.Title">
+        <item name="android:textSize">@dimen/text_size_title</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
     </style>
 </resources>
