--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,10 +6,10 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
 
-    <item
-        android:id="@+id/navigation_daily_entries"
-        android:icon="@drawable/ic_daily_entries"
-        android:title="@string/title_daily_entries" />
+<!--    <item-->
+<!--        android:id="@+id/navigation_daily_entries"-->
+<!--        android:icon="@drawable/ic_daily_entries"-->
+<!--        android:title="@string/title_daily_entries" />-->
 
     <item
         android:id="@+id/navigation_pictures"
