--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -128,6 +128,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.177" />
 
+    <TextView
+        android:id="@+id/text_BMI"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="BMI:"
+        android:textAppearance="@style/Fitness.TextAppearance.AppCompat.Subhead.Regular"
+     app:layout_constraintTop_toBottomOf="@id/text_weekly_weight_loss"
+        app:layout_constraintStart_toStartOf="@id/text_weekly_weight_loss"
+        app:layout_constraintVertical_bias="0.177" />
+
     <View
         android:id="@+id/blue_bar_view"
         android:layout_width="match_parent"
