--- a/app/src/main/res/layout/fragment_pictures.xml
+++ b/app/src/main/res/layout/fragment_pictures.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,8 +18,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:paddingTop="@dimen/activity_horizontal_margin"
-            android:textAppearance="@style/Fitness.TextAppearance.AppCompat.Headline.Regular"
-            android:text="Pictures"/>
+            android:text="Pictures"
+            android:textAppearance="@style/Fitness.TextAppearance.AppCompat.Headline.Regular" />
+
         <View
             android:id="@+id/row_divider"
             android:layout_width="match_parent"
@@ -28,6 +28,65 @@
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:background="@color/divider" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/Fitness.TextAppearance.AppCompat.Subhead.Medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_picture_folder"
+                android:drawablePadding="50dp"
+                android:text="Picture Collections" />
+
+            <ImageView
+                android:layout_marginStart="32dp"
+                android:id="@+id/captured_image"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+
+        </LinearLayout>
+        <!--        <androidx.appcompat.widget.AppCompatImageView-->
+        <!--            android:layout_width="50dp"-->
+        <!--            android:layout_height="50dp"-->
+        <!--            android:layout_marginTop="30dp"-->
+        <!--            android:layout_gravity="right"-->
+        <!--            android:layout_marginEnd="16dp"-->
+        <!--            android:src="@drawable/ic_picture_entries_iv" />-->
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+
+<!--            <androidx.appcompat.widget.AppCompatImageView-->
+<!--                android:id="@+id/take_a_picture"-->
+<!--                android:layout_width="50dp"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_marginTop="30dp"-->
+<!--                android:layout_marginEnd="16dp"-->
+<!--                android:src="@drawable/ic_picture_entries_iv" />-->
+
+
+            <Button
+                android:id="@+id/open_camera_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="Take A Picture" />
+
+        </LinearLayout>
+
+
     </LinearLayout>
+
 
 </ScrollView>
