--- a/app/src/main/res/layout/activity_take_picture.xml
+++ b/app/src/main/res/layout/activity_take_picture.xml
@@ -11,9 +11,8 @@
     tools:context=".segments.pictures.TakePictureActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/camera"
         android:src="@drawable/ic_picture_entries_iv" />
 
