--- a/app/src/main/res/layout/activity_take_picture.xml
+++ b/app/src/main/res/layout/activity_take_picture.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/open_camera_btn"
-        android:text="Take A Picture"
+        android:text="@string/take_a_picture"
         android:layout_marginTop="10dp"/>
 
 </LinearLayout>
