--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -149,6 +149,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
         android:background="@color/primary_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -246,10 +247,5 @@
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
