--- a/app/src/main/res/layout/fragment_pictures.xml
+++ b/app/src/main/res/layout/fragment_pictures.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context=".segments.history.HistoryFragment">
 
     <LinearLayout
@@ -49,13 +48,6 @@
                 android:layout_height="50dp" />
 
         </LinearLayout>
-        <!--        <androidx.appcompat.widget.AppCompatImageView-->
-        <!--            android:layout_width="50dp"-->
-        <!--            android:layout_height="50dp"-->
-        <!--            android:layout_marginTop="30dp"-->
-        <!--            android:layout_gravity="right"-->
-        <!--            android:layout_marginEnd="16dp"-->
-        <!--            android:src="@drawable/ic_picture_entries_iv" />-->
 
 
         <LinearLayout
@@ -65,23 +57,13 @@
             android:orientation="vertical">
 
 
-<!--            <androidx.appcompat.widget.AppCompatImageView-->
-<!--                android:id="@+id/take_a_picture"-->
-<!--                android:layout_width="50dp"-->
-<!--                android:layout_height="50dp"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:layout_marginTop="30dp"-->
-<!--                android:layout_marginEnd="16dp"-->
-<!--                android:src="@drawable/ic_picture_entries_iv" />-->
-
-
             <Button
                 android:id="@+id/open_camera_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:text="Take A Picture" />
+                android:text="@string/take_a_picture" />
 
         </LinearLayout>
 
